syntax = "proto3";

package order;

option go_package = "github.com/ecommerce/order-service/pb";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (Order);
  rpc GetOrder (GetOrderRequest) returns (Order);
  rpc ListOrders (ListOrdersRequest) returns (OrderList);
  rpc UpdateOrderStatus (UpdateOrderStatusRequest) returns (Order);
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse);
}

message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
  ShippingAddress shipping_address = 3;
  string payment_method = 4;
}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
  double unit_price = 3;
}

message ShippingAddress {
  string street = 1;
  string city = 2;
  string state = 3;
  string zip = 4;
  string country = 5;
}

message Order {
  string id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  double total_amount = 4;
  string status = 5;
  string payment_status = 6;
  ShippingAddress shipping_address = 7;
  string created_at = 8;
  string updated_at = 9;
}

message GetOrderRequest {
  string order_id = 1;
}

message ListOrdersRequest {
  string user_id = 1;
  int32 skip = 2;
  int32 limit = 3;
}

message OrderList {
  repeated Order orders = 1;
  int32 total = 2;
}

message UpdateOrderStatusRequest {
  string order_id = 1;
  string status = 2;
  string payment_status = 3;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
  string service = 2;
}
